--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <head>
 <link rel="stylesheet"
 href="style.css">
-<title> What.
-</title>
+<title> What. </title>
 </head>
 <body>
 <h1> It is a GOOD website. </h1>
